实现页面分页

--- a/src/view.html
+++ b/src/view.html
@@ -132,14 +132,6 @@
                                         </svg>
                                     </span>
                                 </li>
-                                <li class="q-pulldown-menu-list-item" data-value="star">
-                                    <span class="content">Star数量</span>
-                                    <span class="icon">
-                                        <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M2 7L6.00001 11L14 3" stroke="currentColor" stroke-linejoin="round"></path>
-                                        </svg>
-                                    </span>
-                                </li>
                                 <li class="q-pulldown-menu-list-item" data-value="sequence">
                                     <span class="content">由新到旧</span>
                                     <span class="icon">
@@ -246,10 +238,11 @@
         </div>
         <hr class="horizontal-dividing-line" />
         <div class="vertical-list-item">
-            <span>第 1 / 1 页</span>
+            <span>
+                第 <span class="current-page"></span> / <span class="total-page"></span> 页</span>
             <div class="ops-btns">
-                <button class="q-button q-button--small q-button--secondary">上一页</button>
-                <button class="q-button q-button--small q-button--secondary">下一页</button>
+                <button class="q-button q-button--small q-button--secondary previous-page">上一页</button>
+                <button class="q-button q-button--small q-button--secondary next-page">下一页</button>
             </div>
         </div>
     </div>
