暂时禁用选项

--- a/src/view.html
+++ b/src/view.html
@@ -1,7 +1,7 @@
 <section class="list-ctl">
     <div class="wrap">
         <div class="vertical-list-item">
-            <input class="search-input" type="text" spellcheck="false" placeholder="在此处输入以搜索插件...">
+            <input class="search-input" type="text" spellcheck="false" placeholder="搜索 与 高级选项-插件类型 暂时不可使用">
             <div class="adv-ops-btn">
                 <svg class="icon is-fold" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M21 8L12 17L3 8" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"></path>
