添加列表加载的tips

--- a/src/renderer/view.html
+++ b/src/renderer/view.html
@@ -249,3 +249,20 @@
 </section>
 
 <section class="plugin-list"></section>
+
+<section class="list-tips">
+    <div class="wrap">
+        <div class="vertical-list-item offline hidden">
+            <h2>无网络链接！请检查互联网</h2>
+        </div>
+        <div class="vertical-list-item loading hidden">
+            <h2>列表加载中～可能会有些久</h2>
+        </div>
+        <div class="vertical-list-item error hidden">
+            <h2>列表加载失败！关闭窗口重试</h2>
+        </div>
+        <div class="vertical-list-item end hidden">
+            <h2>翻到底了嗷～每页最多展示10个</h2>
+        </div>
+    </div>
+</section>
